Add DMG background

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,7 @@ jobs:
           create-dmg \
             --volname "VPinFE" \
             --volicon "icon/VPinFE.icns" \
+            --background "icon/DMG_background.png" \
             --window-pos 200 120 \
             --window-size 600 400 \
             --icon-size 100 \
